<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_edit_task_toolbar_height">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_normal"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:counterTextAppearance="@style/TextAppearance.AppTheme.Accent.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_edit_task_input_edit_text_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_task_hint_task_title"
                    android:maxLength="100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/typography_headline" />
            </android.support.design.widget.TextInputLayout>


        </FrameLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_edit_task_button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:src="@drawable/add_edit_task_vector_done"
        app:backgroundTint="@color/all_accent"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/add_edit_task_toolbar_height"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small">


        <LinearLayout
            android:id="@+id/add_edit_task_linear_layout_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_edit_task_vector_calender" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_edit_task_label_deadline"
                    android:textColor="@color/black"
                    android:textSize="@dimen/typography_body1" />

                <TextView
                    android:id="@+id/add_edit_task_text_view_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_edit_task_label_today"
                    android:textSize="@dimen/typography_caption" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/add_edit_task_linear_layout_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_edit_task_vector_priority" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_label_priority"
                    android:textColor="@color/black"
                    android:textSize="@dimen/typography_body1" />

                <TextView
                    android:id="@+id/add_edit_task_text_view_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_label_priority_1"
                    android:textSize="@dimen/typography_caption" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>