<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_linear_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/all_message_welcome"
                android:textColor="@color/all_primary"
                android:textSize="@dimen/typography_display1"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_field_icon_size"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:src="@drawable/all_selector_email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_input_edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/all_hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_field_icon_size"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:src="@drawable/all_selector_lock" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/register_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_input_edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/all_hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/register_button_register"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/register_action_register" />


        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />
</FrameLayout>